--- a/.github/workflows/python_app.yaml
+++ b/.github/workflows/python_app.yaml
@@ -29,12 +29,14 @@ jobs:
 
     # This step sets up Python on the runner
     # TODO: Change the Python version to 3.12
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.12"
 
-    # TODO: Install uv on the runner
+    # TODO: #1 Install uv on the runner
+    - name: Install the latest version of uv
+      uses: astral-sh/setup-uv@v7
 
 
 
@@ -43,26 +45,16 @@ jobs:
 
     # This step installs dependencies
     # TODO: Replace the run block, using `uv` to sync the environment
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      
 
     # This step runs unit tests with pytest
     # TODO: Update the run block. Use: uv run -m pytest
     # (we need -m so that our tests can find our notebook code)
-    - name: Test with pytest
-      run: |
-        pytest
+
 
     # This step runs the linter against the codebase
     # TODO: Replace the run block to use our preferred linter
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
 
     # TODO: Add steps to run formatting steps and type checking
